crates/datarig-tui/tests/snapshots/flows_safety__read_only_markers_en_80x24.snap
---
source: crates/datarig-tui/tests/flows_safety.rs
expression: backend
---
"╭ Explorer ────────────╮ 1 console 1 RO ○ ×                                     "
"│  ＋ New connection   │╭ Query · console 1 ───────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg RO     ││ local-pg / datarig  127.0.0.1:55432  READ-ONLY       │"
"│  ▾ datarig default   ││  1 -- datarig 🐘  Ctrl+E: run the statement under the│" Hidden by multi-width symbols: [(41, " ")]
"│    ▸ public          ││  2▎SELECT * FROM shop.users WHERE id <= 8;           │"
"│    ▸ shop            ││  3                                                   │"
"│    Loading…          ││  4 SELECT u.name, o.status, o.total_amount           │"
"│                      ││  5 FROM shop.orders o                                │"
"│                      ││  6 JOIN shop.users u ON u.id = o.user_id             │"
"│                      ││  7 WHERE o.status = 'paid';                          │"
"│                      ││  8                                                   │"
"│                      ││  9 SELECT * FROM analytics.events;                   │"
"│                      ││ 10                                                   │"
"│                      ││ 11 SELECT * FROM analytics.events ORDER BY created_at│"
"│                      ││ 12                                                   │"
"│                      ││ 13 SELECT analytics.slow(30);                        │"
"│                      ││ 14                                                   │"
"│                      ││ 15 SELECT $$a body; with a semicolon$$ AS dollar, 'it│"
"│                      ││ 16                                                   │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: prod  READ-ONLY  │ Connected to local-pg         EN "
