crates/datarig-tui/tests/snapshots/flows_safety__run_confirm_en_80x24.snap
---
source: crates/datarig-tui/tests/flows_safety.rs
expression: backend
---
"╭ Explorer ────────────╮ 1 console 1 ○ ×                                        "
"│  ＋ New connection   │╭ Query · console 1 ───────────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg        ││ local-pg / datarig  127.0.0.1:55432 · policy: careful│"
"│  ▾ datarig default   ││  1 T 1;                                              │"
"│ ╭ Run 4 statements that may do harm? ──────────────────────────────────────╮ │"
"│ │ ● local-pg · policy: careful                                             │ │"
"│ │                                                                          │ │"
"│ │ 2/5  deletes every row · no WHERE  target: shop.orders                   │;│"
"│ │      DELETE FROM shop.orders                                             │ │"
"│ │ 3/5  updates every row · its WHERE is always true  target: shop.users    │ │"
"│ │      UPDATE shop.users SET name = 'x' WHERE true                         │ │"
"│ │ 4/5  drops it  target: shop.reviews                                      │ │"
"│ │      DROP TABLE IF EXISTS shop.reviews CASCADE                           │ │"
"│ │ 5/5  writes  target: shop.audit_log                                      │ │"
"│ │      INSERT INTO shop.audit_log (note) VALUES ('中文 備註')              │ │" Hidden by multi-width symbols: [(53, " "), (55, " "), (58, " "), (60, " ")]
"│ │                                                                          │ │"
"│ │                           [ Cancel ]     Run                             │ │"
"│ ╰─────────────────────── y run · Enter chooses · Tab switch · n/Esc cancel ╯ │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: careful │ Connected to local-pg                  EN "
